--- a/res/layout/activity_takephoto.xml
+++ b/res/layout/activity_takephoto.xml
@@ -10,12 +10,19 @@
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-    
-    <FrameLayout 
+
+    <FrameLayout
         android:id="@+id/frame"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentRight="true" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
