--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -25,6 +25,13 @@
             android:layout_gravity="center"
             android:text="アリチ" />
 
-    </LinearLayout>
+ <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="ジェスチャーデモ" />
+        
+        </LinearLayout>
 
 </FrameLayout>
