--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -16,22 +16,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="コウ" />
+            android:text="ときめきカメラ" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="アリチ" />
-
- <Button
-            android:id="@+id/button3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="ジェスチャーデモ" />
-        
-        </LinearLayout>
+            android:text="ドキドキ" />
+    </LinearLayout>
 
 </FrameLayout>
