--- a/res/layout/activity_manga.xml
+++ b/res/layout/activity_manga.xml
@@ -3,21 +3,19 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
+    
     <FrameLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_margin="30dip"
         android:background="#333333" >
-        <ImageView
-            android:id="@+id/imageView1"
+
+        <Button
+            android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/hitolayer" />
+            android:layout_gravity="right"
+            android:text="Button" />
         
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/backlayer" />
     </FrameLayout>
 </LinearLayout>
