--- a/res/layout/activity_takephoto.xml
+++ b/res/layout/activity_takephoto.xml
@@ -10,14 +10,21 @@
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
+    
     <FrameLayout
         android:id="@+id/frame"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true" />
 
+    <ImageView
+        android:id="@+id/image_outline"
+        android:src="@drawable/face_yoko"
+        android:layout_alignParentRight="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+    
     <ImageButton
         android:id="@+id/imageButton"
         android:layout_width="70dp"
