--- a/res/layout/activity_takephoto.xml
+++ b/res/layout/activity_takephoto.xml
@@ -10,7 +10,7 @@
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-    
+
     <FrameLayout
         android:id="@+id/frame"
         android:layout_width="match_parent"
@@ -20,16 +20,68 @@
 
     <ImageView
         android:id="@+id/image_outline"
-        android:src="@drawable/face_yoko"
-        android:layout_alignParentRight="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-    
-    <ImageButton
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/face_yoko" />
+
+    <ImageView
         android:id="@+id/imageButton"
         android:layout_width="70dp"
         android:layout_height="70dp"
+        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/shutter" />
+
+    <RelativeLayout
+        android:id="@+id/relative_light"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0" >
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginBottom="101dp"
+            android:layout_marginLeft="59dp"
+            android:scaleX="3"
+            android:scaleY="3"
+            android:src="@drawable/light" />
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="52dp"
+            android:layout_marginTop="32dp"
+            android:src="@drawable/light" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/imageView2"
+            android:layout_alignLeft="@+id/imageView1"
+            android:layout_marginBottom="37dp"
+            android:layout_marginLeft="18dp"
+            android:scaleX="2"
+            android:scaleY="2"
+            android:src="@drawable/light" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignRight="@+id/imageView2"
+            android:layout_alignTop="@+id/imageView1"
+            android:layout_marginRight="18dp"
+            android:layout_marginTop="41dp"
+            android:src="@drawable/light" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
