--- a/res/layout/fragment0.xml
+++ b/res/layout/fragment0.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:text="Fragment 0"
         android:textSize="30sp"
         android:padding="50dp"/>
