--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -36,6 +36,8 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearTodayKabedon"
+        android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/imageCamera"
@@ -135,6 +137,7 @@
         android:id="@+id/imageCamera"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:layout_marginBottom="10dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:src="@drawable/icon_camera" >
