--- a/res/layout/activity_takephoto.xml
+++ b/res/layout/activity_takephoto.xml
@@ -26,13 +26,22 @@
         android:alpha="0.7"
         android:scaleType="fitXY"
         android:src="@drawable/mask_frame" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:scaleType="fitXY"
+        android:layout_height="80dp"
+        android:alpha="0.7"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/bar" />
+    
     <ImageView
         android:id="@+id/imageButton"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:src="@drawable/btn_camera" />
 
     <RelativeLayout
