--- a/res/layout/activity_slide_manga.xml
+++ b/res/layout/activity_slide_manga.xml
@@ -1,18 +1,36 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
-     android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/title"
+    android:background="#000"
     tools:context="com.kabe.donhackday2014.MainActivity"
     tools:ignore="MergeRootFrame" >
-    
+
     <ImageView
-        android:id="@+id/image"
+        android:id="@+id/image3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/manga_test"
-        />
+        android:visibility="invisible" />
 
+    <ImageView
+        android:id="@+id/image2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible" />
+
+    <ImageView
+        android:id="@+id/image1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <ImageView
+        android:id="@+id/imageLast"
+        android:background="#a000"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/last"
+        android:scaleType="fitCenter"
+        android:visibility="invisible" />
 
 </FrameLayout>
